roles/openshift_ossm/docs/examples/gateway-injection/istio-ingress-testapp/testapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: testapp
