roles/openshift_ossm/docs/examples/gateway-injection/istio-ingress-testapp/testapp-http-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testapp-http
spec:
  selector:
    # Use custom ingress gateway
    istio: ingressgateway-custom
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - testapp-http.example.com
