roles/openshift_ossm/docs/examples/gateway-injection/istio-ingress-testapp/testapp-http-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testapp-http
spec:
  hosts:
  - testapp-http.example.com
  gateways:
  - testapp-http
  http:
  - route:
    - destination:
        host: testapp
        port:
          number: 8080
